# -*- coding: utf-8 -*-

import handler

class TxtCsvFormatHandler(handler.Handler):
    def __init__(self, outfile_format):
        pass
    def process(self, msg):
        print "start to do csv format convertion."
